src/containers/course/courseLayout.module.scss
.layoutWrap {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
}

.bodyWrap {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  // flex-direction: row;
  flex-direction: column;
}
.leftWrap {
  width: 100%;
  // height: 100%;
  height: calc(100vw / 16 * 9);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.rightWrap {
  width: 100%;
  // height: 100%;
  height: calc(100% - 40px - 100vw / 16 * 9);
  position: relative;
  // border-left: 1px solid #cacaca;
  display: flex;
  flex-direction: column;
}

/* pc */
@media all and (min-width: 1024px) {
  .layoutWrap {
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    // flex-direction: row;
    flex-direction: column;
  }
  .bodyWrap {
    width: 100%;
    height: calc(100% - 40px);
    position: relative;
    display: flex;
    flex-direction: row;
    // flex-direction: column;
  }
  .leftWrap {
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  .rightWrap {
    width: 20%;
    height: 100%;
    position: relative;
    border-left: 1px solid #cacaca;
    // border-left: 1px solid #cacaca;
    display: flex;
    flex-direction: column;
  }
}

